# Forge-CLI

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
configs/: mcp_servers.json
mcp_servers/rag_server/: hyde.py  ingestion.py  retrieval.py  server.py
src/codepilot/: config.py  main.py
src/codepilot/core/: agent_loop.py  conversation.py  tool_registry.py
src/codepilot/mcp/: client.py  config.py  tool_adapter.py
src/codepilot/providers/: base.py  ollama_provider.py  openai_provider.py
src/codepilot/tools/: base.py  file_edit.py  file_read.py  file_write.py  glob_search.py  grep_search.py  shell.py
src/codepilot/ui/: renderer.py  repl.py
